# FlagScale-Agent

./: .gitignore  CONTRIBUTING.md  README.md  README_zh.md  pyproject.toml
examples/: README.md  agent_config.yaml  diagnose_training.md  train_qwen2_7b.md
flagscale_agent/: __init__.py  cli.py
flagscale_agent/react/: __init__.py  agent.py  commands.py  config.py  constants.py  display.py  experiment_manager.py  history.py  judge.py  judge_fast.py  kernel.py  memory.py  orchestrator.py  paths.py  plan.py  profile.py  prompt.py  prompt_builder.py  retry.py  scene.py  session.py  state_machine.py  tool_executor.py
flagscale_agent/react/chip/: __init__.py  base.py  detect.py  migration.py  nvidia.py  registry.py
flagscale_agent/react/constraint/: __init__.py  cache.py  extractor.py
flagscale_agent/react/guard/: __init__.py  budget.py  circuit_breaker.py  constraint.py  context_pressure.py  env_compat.py  error_classifier.py  experiment.py  loop_detect.py  plan.py  plan_update.py  progress.py  safety.py  training_runtime.py  utils.py
flagscale_agent/react/providers/: __init__.py  base.py  (+2 more)
tests/: test_chip.py  test_config.py  test_constraints.py  test_display.py  test_guards.py  test_history.py  test_inspect_checkpoint.py  test_intra_turn.py  test_judge.py  test_judge_fast.py  test_kernel.py  test_memory.py  test_monitor.py  test_plan.py  test_providers.py  test_reliability.py  test_retry.py  test_schema_filter.py  test_session.py  test_skill_centric.py  test_skill_manager.py  test_skill_validation.py  test_tools.py  test_validate_config.py  test_web_fetch.py
(+54 files in other folders)
